@@ -6,7 +6,11 @@ AC_SUBST([LIBJAVASCRIPTCOREGTK_VERSION])
 AC_SUBST([LIBWEBKIT2GTK_VERSION])
 
 if test -z "$AR_FLAGS"; then
-    AR_FLAGS="cruT"
+    if "${AR:-ar}" -V | grep -q 'GNU ar'; then
+        AR_FLAGS="cruT"
+    else
+        AR_FLAGS="cru"
+    fi
 fi
 AC_SUBST([AR_FLAGS])
 
